manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  namespace: udacity-demo
spec:
  selector:
    app: nginx
    tag: alpine
  ports:
    - port: 8111
      targetPort: 80
  type: LoadBalancer
