manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    tag: alpine
  name: nginx-alpine
  namespace: udacity-demo
spec:
  ports:
  - port: 8111
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    tag: alpine
  type: ClusterIP
